# nl-voting-data-scraper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check.yml  publish.yml
examples/: scrape_all_municipal.py  scrape_national.py  scrape_single.py
src/nl_voting_data_scraper/: __init__.py  api_scraper.py  browser_scraper.py  bundle_extractor.py  cache.py  cli.py  config.py  decoder.py  models.py  output.py  rate_limiter.py  scraper.py
tests/: conftest.py  test_bundle_extractor.py  test_cache.py  test_cli.py  test_decoder.py  test_models.py  test_output.py  test_scraper.py
tests/fixtures/: eu2024_bundle.js  sample_index.json  sample_municipality.json  tk2023_bundle.js
